--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@ footer {
     <h1>Admin Dashboard - Program Registrations</h1>
 
     <div class="btns">
-      <a href="https://github.com/uppundaadithya/PROGRAM-REGISTER-MAIN.git"><button> Go to Registration</button></a>
-      <a href="https://github.com/uppundaadithya/APPROVED-LIST.git"><button> View <br>Approved</button></a>
+      <a href="https://uppundaadithya.github.io/PROGRAM-REGISTER-MAIN/"><button> Go to Registration</button></a>
+      <a href="https://uppundaadithya.github.io/APPROVED-LIST/"><button> View <br>Approved</button></a>
     </div>
 
     <div class="inputarea6">
