--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@ footer {
     <div class="btns">
       <a href="https://uppundaadithya.github.io/PROGRAM-REGISTER-MAIN/"><button> Go to Registration</button></a>
       <a href="https://uppundaadithya.github.io/APPROVED-LIST/"><button> View <br>Approved</button></a>
+       <a href="https://uppundaadithya.github.io/ADM/"><button> Manage<br>Users</button></a>
     </div>
 
     <div class="inputarea6">
